<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.WelcomePage_Activity">
    <ImageView
        android:id="@+id/main_IMG_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/app_icon"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/welcome_to_pac_man_game"
                android:textStyle="italic|bold"
                android:layout_margin="16dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/main_EDT_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_your_name"
                        android:layout_weight="2"
                        android:layout_margin="20dp"
                        android:inputType="text" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/main_BTN_send"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/send"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        app:cornerRadius="15dp"
                        android:layout_margin="10dp"
                        />
                </LinearLayout>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_LBL_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_gravity="start"
                    android:layout_margin="15dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="bottom"
                android:layout_weight="0.1"
                android:padding="16dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/main_BTN_sensorsGame"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sensors_game"
                    android:layout_gravity="center"
                    app:cornerRadius="15dp"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/main_BTN_controlsGame"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_game"
                    android:layout_gravity="center"
                    app:cornerRadius="15dp"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/main_BTN_topTen"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/top_10"
                    android:layout_gravity="center"
                    app:cornerRadius="15dp"
                    />

            </LinearLayout>
        </LinearLayout>

</RelativeLayout>